fixed tooltip not being readable

--- a/public/assets/css/tooltip.css
+++ b/public/assets/css/tooltip.css
@@ -37,12 +37,23 @@
 
 .tooltip-dropdown__content,
 .mobileTooltip {
-  background-color: var(--green-darker);
+  background-color: var(--yellow-light);
   border-radius: 10px;
   padding: 8px 12px;
   width: 265px;
   text-align: left;
   box-shadow: rgba(0, 0, 0, 0.3) 2px 1px 10px 1px;
+}
+
+.tooltip-dropdown__content p,
+.tooltip-dropdown__content strong,
+.tooltip-dropdown__content b,
+.tooltip-dropdown__content span,
+.mobileTooltip p,
+.mobileTooltip strong,
+.mobileTooltip b,
+.mobileTooltip span {
+  color: var(--green-darker);
 }
 
 .infoMobile {
